<resources>
    <string name="app_name">Check In</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lbl_you_are_at">Check In at</string>
    <string name="lbl_Action">What are you doing?</string>
    <string name="action_hint"><i>Picnic...</i></string>
    <string name="btn_get_location">GET LOCATION</string>
    <string name="btn_start_location_updates">START L UPDATES</string>
    <string name="btn_stop_location_updates">STOP L UPDATE</string>
    <string name="MAPS_API_KEY">AIzaSyDj0Kp1d2rISxWBpz-jh8jAdX_yyRQbQkI</string>

    <string name="chkBox_private">Private</string>
    <string name="chkBox_public">Public</string>
    <string name="chkBox_friends">Friends</string>

    <string name="btnSaveText">Save</string>

    <string name="appDesc">This is a location aware check-in mobile application for android.</string>
    <string name="appMoreInfo">To add a location, click the Greet "add" button in the bottom right to get started.</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="loading">Loading</string>

</resources>
